--- a/index.html
+++ b/index.html
@@ -3,39 +3,37 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Syshire by Sys-Lab</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <title>Join SYSLAB - 2013</title>
+    <style>
+      #loading{
+        position:absolute;
+        top:40%;
+        font-size:48px;
+      }
+      iframe{
+        position:absolute;
+        top:0px;
+        left:0px;
+        right:0px;
+        bottom:0px;
+        opacity:0;
+      }
+    </style>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Syshire</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/Sys-Lab/syshire">View the Project on GitHub <small>Sys-Lab/syshire</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/Sys-Lab/syshire/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Sys-Lab/syshire/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Sys-Lab/syshire">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <p>hi</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Sys-Lab">Sys-Lab</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+  <center id="loading">Please Wait...</center>
+    <iframe onload="loadok(this)" src="http://www.shirt-t.com:8088/"></iframe>
+    <script>
+      function loadok(node){
+        document.getElementById('loading').style.display="none";
+        node.style.opacity=1;
+      }
+    </script>
     
   </body>
 </html>
