--- a/index.html
+++ b/index.html
@@ -1,40 +1,5 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Join SYSLAB - 2013</title>
-    <style>
-      #loading{
-        position:absolute;
-        top:40%;
-        font-size:48px;
-        width:100%;
-      }
-      iframe{
-        position:absolute;
-        top:0px;
-        left:0px;
-        right:0px;
-        bottom:0px;
-        opacity:0;
-      }
-    </style>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-  <center id="loading">Please Wait...</center>
-    <iframe width="100%" height="100%" onload="loadok(this)" src="http://www.shirt-t.com:8088/"></iframe>
-    <script>
-      function loadok(node){
-        document.getElementById('loading').style.display="none";
-        node.style.opacity=1;
-      }
-    </script>
-    
-  </body>
-</html>
+﻿<!doctype html><html><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=0" /><link rel="stylesheet" href="assert/main.css"></head><body><canvas id="SYS_bg"></canvas><div id="SYS_loading_statue"onselectstart="return false;"></div><div id="i_am_code_2"onclick="i_am_code_2();"></div><div id="SYS_fps"></div><div id="SYS_hire_main"><div id="SYS_hire_main_fp"onselectstart="return false;"><center id="SYS_hire_main_fp_main"><div id="SYS_hire_main_fp_logo"class="ani">SysLab</div><div id="SYS_hire_main_fp_us">我们只是网络浪潮的逐梦者</div></center><div id="SYS_hire_main_fp_next"type="SYS_hire_next">&#x3d;</div></div><div id="SYS_hire_main_you"><div id="SYS_hire_main_you_title"onselectstart="return false;">让我们认识你</div><div id="SYS_hire_main_you_choose"onselectstart="return false;"><div id="SYS_hire_main_you_choose_male"class="ani"type="SYS_hire_gen">&#xe026;</div><div id="SYS_hire_main_you_choose_female"class="ani"type="SYS_hire_gen">&#xe025;</div></div><div id="SYS_hire_main_you_infos"class="ani"><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">名字</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_name"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">学院</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_college"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">年级</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_grade"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">手机[接收通知]</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_mobile"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">Email</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_email"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">来自</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_comefrom"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">与众不同之处</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_difference"></div></div><div id="SYS_hire_main_you_next"type="SYS_hire_next"onselectstart="return false;">&#x3d;</div></div><div id="SYS_hire_main_skill"><div id="SYS_hire_main_skill_title"onselectstart="return false;">让我们了解你</div><center><div id="SYS_hire_main_skill_icon"onselectstart="return false;">&#xf27e;</div><div id="SYS_hire_main_skill_bars"onselectstart="return false;"><div class="SYS_hire_bar"><div class="SYS_hire_bar_t">产品与研发我更喜欢</div><div class="SYS_hire_bar_l">产品</div><div class="SYS_hire_bar_b"id="SYS_hire_bar_0"><div class="SYS_hire_bar_left"id="SYS_hire_bar_0_left"></div><div class="SYS_hire_bar_right"id="SYS_hire_bar_0_right"></div><div class="SYS_hire_bar_h"id="SYS_hire_bar_0_h"></div></div><div class="SYS_hire_bar_r">研发</div></div><div class="SYS_hire_bar"><div class="SYS_hire_bar_t">美术与代码我更喜欢</div><div class="SYS_hire_bar_l">美术</div><div class="SYS_hire_bar_b"id="SYS_hire_bar_1"><div class="SYS_hire_bar_left"id="SYS_hire_bar_1_left"></div><div class="SYS_hire_bar_right"id="SYS_hire_bar_1_right"></div><div class="SYS_hire_bar_h"id="SYS_hire_bar_1_h"></div></div><div class="SYS_hire_bar_r">代码</div></div><div class="SYS_hire_bar"><div class="SYS_hire_bar_t">前端与后端我更倾向于</div><div class="SYS_hire_bar_l">前端</div><div class="SYS_hire_bar_b"id="SYS_hire_bar_2"><div class="SYS_hire_bar_left"id="SYS_hire_bar_2_left"></div><div class="SYS_hire_bar_right"id="SYS_hire_bar_2_right"></div><div class="SYS_hire_bar_h"id="SYS_hire_bar_2_h"></div></div><div class="SYS_hire_bar_r">后端</div></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">神秘的输入框1</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_u1"></div><div type="SYS_hire_form"><div type="SYS_hire_form_t"onselectstart="return false;">神秘的输入框2</div><input type="text"class="SYS_hire_form_ipt"id="SYS_hire_form_u2"></div></center><div id="SYS_hire_main_skill_next"type="SYS_hire_next"onselectstart="return false;">&#x3d;</div></div></div><div id="SYS_hire_main_con"onselectstart="return false;"><center id="SYS_hire_main_con_sending"><div id="SYS_hire_main_con_sending_icon"class="loading_rotate">&#xe096;</div><div id="SYS_hire_main_con_sending_words">正在通信...</div></center></div></div></body>
+<script type="text/JavaScript" src="assert/jsDraw2DX.js"></script><script src="assert/jquery.ajax.min.js"></script><script src="assert/filer.min.js"></script><script src="assert/socket.io.min.js"></script><script src="assert/sjcl.js"></script><script src="assert/microjs.min.js"></script><script src="assert/base.full.js"></script>
+<script type="text/javascript" src="assert/main.js"></script></html>
+
+
