--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ cursor:default;
 }
 #SYS_hire_main_fp_main{
 	position: absolute;
-	top: 20%;
+	top: 10%;
 	width:100%;
 }
 [type="SYS_hire_next"] {
@@ -339,7 +339,12 @@ font-size: 24px;
 	<div id="SYS_hire_main_fp" onselectstart="return false;">
     	<center id="SYS_hire_main_fp_main">
         	<div id="SYS_hire_main_fp_logo" class="ani">SysLab</div>
-        	<div id="SYS_hire_main_fp_us">我们只是网络浪潮的逐梦者</div>
+            <div id="SYS_hire_main_fp_us">我们只是网络浪潮的逐梦者</div>
+            <div id="SYS_hire_main_fp_about">
+            	SysLab-专注互联网和移动互联网的研发<br/>
+            	由张翼成教授和周涛教授支持<br/>
+                加入我们,一起创新吧
+            </div>
         </center>
         <div id="SYS_hire_main_fp_next" type="SYS_hire_next" class="loading_rotate">&#xe096;</div>
     </div>
