--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@ cursor:default;
 }
 #SYS_hire_main_fp_us {
 	font-size: 36px;
-	margin-top:100px;
+	margin-top:60px;
+}
+#SYS_hire_main_fp_about {
+font-size: 24px;
+margin-top: 30px;
 }
 #SYS_hire_main_fp_main{
 	position: absolute;
